# NdkTest

./: README.md
app/: build.gradle
app/src/androidTest/java/com/iflytek/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Test_dynamic.cpp  native-lib.cpp
app/src/main/cpp/include/: people.cpp  people.h
app/src/main/java/com/iflytek/ndktest/: MainActivity.java
app/src/main/java/com/iflytek/ndktest/jni/: TestDynamic.java  TestJni.java
app/src/test/java/com/iflytek/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
